buildscript {
    repositories {
        mavenCentral()
    }

    dependencies {
        classpath "org.hsqldb:hsqldb:2.5.1"
    }
}

plugins {
    id 'java'
    id 'war'
}
group 'com.qulix.yurkevichvv.trainingtask'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.9.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
}


dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
}
apply plugin: 'checkstyle'

checkstyle {
    toolVersion = '8.14'
    configFile = rootProject.file('checkstyle/checkstyle.xml')
}

task Checkstyle(type: Checkstyle) {
    source 'src/main/java'
    include '**/*.java'

    classpath = getProject().files()
}
